<resources>
    <string name="app_name">OnTrack</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_add">Add Routine</string>
    <string name="action_profile">Profile</string>
    <string name="action_home">Home</string>
    <string name="action_graph">Graph</string>
    <string name="action_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
