<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <item android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/action_settings"
        app:showAsAction="always"/>

    <item android:id="@+id/action_add"
        android:icon="@drawable/ic_add"
        android:title="@string/action_add"
        app:showAsAction="always"/>

    <item android:id="@+id/action_home"
        android:title="@string/action_home"
        android:icon="@drawable/ic_home"
        app:showAsAction="always" />

    <item android:id="@+id/action_graph"
        android:title="@string/action_graph"
        android:icon="@drawable/ic_graph"
        app:showAsAction="always" />

    <item android:id="@+id/action_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/action_profile"
        app:showAsAction="always"/>
</menu>
